<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EasCook</string>
    <string-array name="riceAmount">
        <item>One Serving</item>
        <item>Two Servings</item>
        <item>Three Servings</item>
        <item>Four Servings</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settime">Set Time for rice to be ready\nand press start</string>
    <string name="set_time">set time</string>
    <string name="or_nstart_cooking_now">Single portion pre-selected</string>
    <string name="start">start</string>
    <string name="three">Three</string>
    <string name="two">Two</string>
    <string name="one">One</string>
    <string name="select_portions_of_rice">Select portions of rice</string>
    <string name="change_amount_of_rice_or_time_for_rice_to_be_ready">change amount of rice or time</string>
    <string name="you_can_cancel_the_cooking_session">Cancel cooking session</string>
    <string name="change">Change</string>


</resources>