<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="2"
    tools:context=".UpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="15">

        <TextView
            android:id="@+id/sel_port_textView_id2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/select_portions_of_rice"
            android:textColor="#fff"
            android:textSize="24sp" />

        <RadioGroup
            android:id="@+id/radioGroup_id"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:theme="@style/ThemeOverlay.AppCompat.Dark">

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:onClick="onClicked"
                android:text="@string/one"
                android:textColor="#fff" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:onClick="onClicked"
                android:text="@string/two"
                android:textColor="#fff" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClicked"
                android:text="@string/three"
                android:textColor="#fff" />

        </RadioGroup>

        <TextView
            android:id="@+id/select_time_id"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/settime"
            android:textColor="#fff"
            android:textSize="24sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">

            <Button
                android:id="@+id/timeButton_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="2"
                android:background="@drawable/btn_round"
                android:gravity="center"
                android:onClick="btClicked"
                android:paddingHorizontal="30dp"
                android:text="@string/set_time"
                android:textColor="#fff"
                android:textSize="24sp" />
        </FrameLayout>

        <TextView
            android:id="@+id/selectedTimeRes_id"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/or_nstart_cooking_now"
            android:textColor="#fff"
            android:textSize="24sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5">

            <Button
                android:id="@+id/start_id2"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="2"
                android:background="@drawable/btn_round"
                android:gravity="center"
                android:onClick="startBtClicked"
                android:text="@string/start"
                android:textColor="#fff"
                android:textSize="24sp" />
        </FrameLayout>

    </LinearLayout>
</LinearLayout>


